tests/20-access-test.stderr
error[E0624]: method `a` is private
  --> tests/20-access-test.rs:14:15
   |
6  |         a: B5,
   |         - private method defined here
...
14 |     let _ = c.a();
   |               ^ private method
